--- a/static/css/image.css
+++ b/static/css/image.css
@@ -7,23 +7,29 @@ body, html {
 }
 
 .main-container {
-    max-width: 900px;  /* Increase container size */
-    margin: 5% auto;
+    max-width: 80%;  /* Increase container size */
+    margin: 10px auto;
     background-color: #ffffff;
-    padding: 40px;  /* More padding for spaciousness */
+    padding: 20px;  /* More padding for spaciousness */
     border-radius: 12px;  /* Increase radius for softer corners */
     box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.05);  /* More prominent shadow */
     border: 1px solid #e1e1e1;  /* Subtle border */
+    overflow-y: auto;
+    min-height: 100vh;
+    position: relative;
+    overflow: hidden;
 }
 
 h1 {
     text-align: center;
-    margin-bottom: 40px;
-    color: #333;  /* Darker text color */
+    margin-bottom: 30px;
+    color: #333; /* Darker text color */
+    margin-top: 0;  
 }
 
 .input-container {
     margin-bottom: 25px;
+    margin-top: 15px;
 }
 
 label {
@@ -91,10 +97,15 @@ input[type=submit]:hover {
 }
 
 .image-container {
-    margin-top: 40px;  /* Added spacing */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    white-space: nowrap;
+    max-width: 90%;    
 }
 
-.image-container img {
+.image-container img {   
     max-width: 100%;
     margin: 15px 0;  /* Added spacing */
     border: 1px solid #ccc;
@@ -135,4 +146,52 @@ input[type=submit]:hover {
         width: 100%;
         margin-bottom: 15px;
     }
+}
+.face-number {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #ffffff;
+    color: #ff0000;
+    font-size: 16px;
+    padding: 4px 8px;
+    border-radius: 4px;
+    z-index: 1;
+}
+
+
+
+.aligned-image {
+    display: inline-block;
+    position: relative;
+    max-width: 50%;
+}
+.selection-row {
+    display: flex;
+    align-items: center; /* Vertically aligns items in the center */
+    justify-content: space-between; /* Distributes space between the items */
+    gap: 20px; /* Adds spacing between the items */
+}
+.combo-box-container {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* or any spacing you prefer */
+}
+.combo-box-container label {
+    font-weight: 500; /* Slight reduction for a modern feel */
+    display: block;
+    margin-bottom: 12px;
+    font-size: 1em;  /* Increase font size for prominence */    
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    color: #000000; 
+}
+
+
+#selected-option {
+    display: inline-block; /* Display the selected option inline */
+    margin-left: 10px; /* Add some spacing between the combo box and text */
 }
