--- a/templates/image.html
+++ b/templates/image.html
@@ -31,6 +31,7 @@
                 <input type="submit" name="action" value="Upload">
                 <input type="submit" name="action" value="Detect">
                 <input type="submit" name="action" value="Align">
+                <input type="submit" name="action" value="Compare">
                 <input type="submit" name="action" value="Clear">
             </div>
         </form>
@@ -49,20 +50,37 @@
         <div class="message-container">
             {{ message }}
         </div>
+        <div class="sim_message-container">
+            {{ sim_message }}
+        </div>
 
         <div class="image-container">
             {% for image_info in images %}
             <div class="aligned-image">
                 <img src="{{ url_for('static', filename=image_info) }}" alt="Processed Image">
-                <!-- <div class="face-number">
+                <div class="face-number">
                     {% if 'aligned_face_' + (selected_face | string) in image_info %}
                     {{ selected_face + 1 }}
                     {% endif %}
-                </div> -->
+                </div>
             </div>
             {% endfor %}
         </div>
     </div>
+    <script>
+        function showAlert(sim_message) {
+            alert(sim_message);
+        }
+    </script>
+
+
+
+{% if showAlert %}
+<script>
+    showAlert("{{ sim_message }}");
+</script>
+{% endif %}
+    
 
     <script>
         const comboBox = document.getElementById("combo-box");
@@ -71,17 +89,19 @@
 
         comboBox.addEventListener("change", function() {
             selectedOption.textContent = comboBox.options[comboBox.selectedIndex].text;
+
             const faceNum = parseInt(comboBox.options[comboBox.selectedIndex].value);
             document.getElementById("hidden-selected-face").value = faceNum ;
-        //     alignedImages.forEach((imgDiv, index) => {
-        // if (faceNum === -2) {
-        //     imgDiv.style.display = 'inline-block'; // Display all images if "All" is selected.
-        // } else if (index + 1 === faceNum) {
-        //     imgDiv.style.display = 'inline-block'; // Display the specific image.
-        // } else {
-        //     imgDiv.style.display = 'none'; // Hide all other images.
-        // }
-        //     });
+
+            alignedImages.forEach((imgDiv, index) => {
+        if (faceNum === -2) {
+            imgDiv.style.display = 'inline-block'; // Display all images if "All" is selected.
+        } else if (index + 1 === faceNum) {
+            imgDiv.style.display = 'inline-block'; // Display the specific image.
+        } else {
+            imgDiv.style.display = 'none'; // Hide all other images.
+        }
+            });
         });
     </script>
 </body>
