--- a/templates/image.html
+++ b/templates/image.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %} Image Processing {% endblock %} {%
 block content %}
-<h1 class="text-light m-4">Upload and Process Images</h1>
+<h1 class="text-light m-4 user-select-none">Upload and Process Images</h1>
 <div class="main-container">
     <form action="/" method="POST" enctype="multipart/form-data" class="w-100">
         <div class="d-flex align-items-center justify-content-center">
