--- a/static/css/image.css
+++ b/static/css/image.css
@@ -1,25 +1,34 @@
-body{
-    min-height: 100vh;
-    background: #5256ad !important;
+:root{
+    --clr-1:#FAAA33;
+    --clr-2:#0465CD;
+    --clr-3:#0056b3;
+    --clr-4:#F49301;
+    --black-1:#282828;
 }
+.content{
+    min-height: 100vh;
+    background-image: linear-gradient( #3C77B6,var(--clr-2)) !important;
+    background-color: var(--clr-2) !important;
+    position: absolute;
+    width: 100%;
+}
+
 .main-container{
     display: flex;
     align-items: center;
     justify-content: center;
 }
   .drag-area{
-    border: 2px dashed #fff;
+    border: 2px dashed var(--clr-1);
     border-bottom: 0px;
     border-radius: 0.2;
     height:30rem;
   }
   
   .drag-area.active{
-    border: 2px solid #fff;
+    border-style: solid;
   }
-  .drag-area .icon{
-    font-size: 100px;
-  }
+ 
   
   .drag-area header{
     font-size: 25px;
@@ -31,40 +40,46 @@ body{
     font-weight: 500;
     margin: 10px 0 15px 0;
   }
-  .drag-area button{
+  .browse-btn{
     font-size: 20px;
     font-weight: 500;
-    color: #5256ad;
+    color:var(--clr-2);
   }
-  .drag-area img{
-    object-fit: fill;
+  .browse-btn:hover{
+    background-color: var(--clr-2);
+    color:var(--bs-light);
+    border-color:var(--clr-3);
   }
-  
 
-h1 {
-    text-align: center;
-    margin-bottom: 30px;
-    color: #333; /* Darker text color */
-    margin-top: 0;  
+
+/* .floating-form-label{
+    color:rgba(var(--bs-light),.65);
 }
-
-
+.floating-form-label::after{
+    background-color: var(--clr-1) !important;
+} */
+.bg-clr-1{
+    background-color: var(--clr-1) !important;
+}
+.text-clr-1{
+    color:var(--clr-1);
+}
 .submit-btn{
-    width: 30%;
     padding: 12px;
     font-size: 1.1em;
-    background-color: #007bff;
-    color: #ffffff;
-    border: none;
+    font-weight: 600;
+    background-color: var(--bs-light);
+    color: var(--black-1);
     border-radius: 8px;
-    cursor: pointer;
+    border-color:var(--clr-1);
     transition: background-color 0.3s ease, transform 0.3s ease;  /* Added transform */
 }
 
 
 
 .submit-btn:hover {
-    background-color: #0056b3;
+    background-color: var(--clr-4);
+    color:var(--bs-light);
     transform: translateY(-2px);  /* Slight lift on hover */
 }
 
@@ -80,77 +95,4 @@ h1 {
 .image-container img:hover {
     transform: scale(1.05);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-}
-
-.message-container {
-    padding: 15px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    background-color: #f8f9fa;  /* Background color for messages */
-    border: 1px solid #e1e1e1;  /* Border */
-}
-
-.message-container.error {
-    background-color: #ffdddd;
-    border: 1px solid #ff5c5c;
-}
-
-.message-container.success {
-    background-color: #d4edda;
-    border: 1px solid #28a745;
-}
-
-@media (max-width: 768px) {
-    .button-container {
-        flex-direction: column;
-        align-items: stretch;
-    }
-
-    input[type=submit] {
-        width: 100%;
-        margin-bottom: 15px;
-    }
-}
-.face-number {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #ffffff;
-    color: #ff0000;
-    font-size: 16px;
-    padding: 4px 8px;
-    border-radius: 4px;
-    z-index: 1;
-}
-
-
-
-.selection-row {
-    display: flex;
-    align-items: center; /* Vertically aligns items in the center */
-    justify-content: space-between; /* Distributes space between the items */
-    gap: 20px; /* Adds spacing between the items */
-}
-.combo-box-container {
-    display: flex;
-    align-items: center;
-    gap: 10px; /* or any spacing you prefer */
-}
-.combo-box-container label {
-    font-weight: 500; /* Slight reduction for a modern feel */
-    display: block;
-    margin-bottom: 12px;
-    font-size: 1em;  /* Increase font size for prominence */    
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    color: #000000; 
-}
-
-
-#selected-option {
-    display: inline-block; /* Display the selected option inline */
-    margin-left: 10px; /* Add some spacing between the combo box and text */
 }
